2008-04-28  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Simon.

        First part of the fix for tabbing to a checkbox/button doesn't work on Win/X11

        Draw controls instead of pimitive elements, to get focus rects for free.

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::paintButton):

2008-04-28  Lincoln Ramsay  <lincoln.ramsay@trolltech.com>

        Reviewed by Simon.

        Compile when QT_NO_CLIPBOARD is defined.

        * platform/qt/ClipboardQt.cpp:
        (WebCore::ClipboardQt::ClipboardQt):
        (WebCore::ClipboardQt::clearData):
        (WebCore::ClipboardQt::clearAllData):
        (WebCore::ClipboardQt::setData):
        (WebCore::ClipboardQt::declareAndWriteDragImage):
        (WebCore::ClipboardQt::writeURL):
        (WebCore::ClipboardQt::writeRange):
        * platform/qt/PasteboardQt.cpp:
        (WebCore::Pasteboard::writeSelection):
        (WebCore::Pasteboard::plainText):
        (WebCore::Pasteboard::documentFragment):
        (WebCore::Pasteboard::writeURL):
        (WebCore::Pasteboard::writeImage):

2008-04-28  Ariya Hidayat  <ariya.hidayat@trolltech.com>

        Reviewed by Simon.

        Draw the arrow button on the styled combo box using the fallback ("Windows") style

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::RenderThemeQt):
        (WebCore::RenderThemeQt::~RenderThemeQt):
        (WebCore::RenderThemeQt::fallbackStyle):
        (WebCore::RenderThemeQt::paintMenuListButton):
        (WebCore::RenderThemeQt::adjustMenuListButtonStyle):
        * platform/qt/RenderThemeQt.h:

2008-04-28  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Holger.

        Fix positioning of native widgets (plugins).

        Correctly convert the coordinates of the Widget in Widget::setFrameGeometry()
        to be relative to the containing toplevel QWidget using convertToContainingWindow().
