@@ -50,6 +50,10 @@
 #include "RenderWidget.h"
 #include "NotImplemented.h"
 
+QT_BEGIN_NAMESPACE
+extern Q_GUI_EXPORT bool qt_tab_all_widgets; // from qapplication.cpp
+QT_END_NAMESPACE
+
 namespace WebCore {
 
 using namespace EventNames;
@@ -71,9 +75,7 @@ bool EventHandler::invertSenseOfTabsToLinks(KeyboardEvent* event) const
 
 bool EventHandler::tabsToAllControls(KeyboardEvent* event) const
 {
-    bool handlingOptionTab = isKeyboardOptionTab(event);
-    
-    return handlingOptionTab;
+    return (isKeyboardOptionTab(event) ? !qt_tab_all_widgets : qt_tab_all_widgets);
 }
 
 void EventHandler::focusDocumentView()
